# continuous-integration-example

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
charts/ci-example/: Chart.yaml  values.yaml
charts/ci-example/templates/: NOTES.txt  _helpers.tpl  container-registry.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/ci-example/templates/tests/: test-connection.yaml
scripts/: start.py
src/: main.py
tests/e2e/: test_health.py
tests/unit/: test_health.py
