[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "continious-integration-example"
version = "0.0.1"
dependencies = [
    'fastapi==0.101.0',
    'uvicorn[standard]==0.23.2'
]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
test = [
  'httpx',
  'pytest',
  'coverage',
  'docker',
  'python-hosts',
  'kubernetes',
]

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "Q", # flake8-quotes
    "INP", # flake8-no-pep-420
    "PT", # flake8-pytest-style
    "RUF" # ruff rules
]
ignore = [
    "E501", # line too long, handled by black
    "B905",
    "B020",
    "B024",
    "B027",
    "C901",
    "SIM117",
    "SIM114",
    "SIM103",
    "SIM102",
    "PT004",
    "PT011",
    "PT012",
    "PT017"
]

[tool.black]
line-length = 120

[tool.mypy]
exclude = ['venv']
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch"
version_scheme = "semver"
version_provider = "pep621"
major_version_zero = true
update_changelog_on_bump = false
version_files = [
    "charts/ci-example/Chart.yaml:version",
    "charts/ci-example/Chart.yaml:appVersion"
]

[tool.coverage.run]
branch = true
relative_files = true
source = [
    "src/"
]
